--- a/app/src/main/res/layout/my_recyclerv_view_item_selected.xml
+++ b/app/src/main/res/layout/my_recyclerv_view_item_selected.xml
@@ -13,6 +13,7 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="@dimen/_16ssp"
+        android:paddingStart="@dimen/_15sdp"
         android:layout_centerVertical="true"/>
 
     <TextView
@@ -21,7 +22,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:text="0"
-        android:paddingEnd="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_15sdp"
         android:textSize="@dimen/_16ssp"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"/>
